--- a/PCExample/makefile
+++ b/PCExample/makefile
@@ -37,7 +37,7 @@ CFLAGS = -Wall -g --std=c89
 
 # define any directories containing header files other than /usr/include
 #
-INCLUDES = -I../../
+INCLUDES = -I../
 
 # define library paths in addition to /usr/lib
 #   if I wanted to include libraries not in /usr/lib I'd specify
@@ -50,7 +50,7 @@ INCLUDES = -I../../
 #LIBS = -lmylib -lm
 
 # define the C source files
-SRCS = $(wildcard *.c) $(wildcard ../../*.c)
+SRCS = $(wildcard *.c) $(wildcard ../*.c)
 
 # define the C object files 
 #
