--- a/PCExample/StaticThreadExample/makefile
+++ b/PCExample/StaticThreadExample/makefile
@@ -23,7 +23,7 @@
 
 
 #
-# 'make depend' uses makedepend to automatically generate dependencies 
+# 'make depend' uses makedepend to automatically generate dependencies
 #               (dependencies are added to end of Makefile)
 # 'make'        build executable file 'mycc'
 # 'make clean'  removes all .o and executable files
@@ -33,11 +33,11 @@
 CC = gcc
 
 # define any compile-time flags
-CFLAGS = -Wall -g --std=c89 -Wall -Wextra -Werror -D_CPX_NO_HEAP_
-
+CFLAGS = -Wall -g --std=c89 -Wall -Wextra -Werror
+CPX_DIR = ../../
 # define any directories containing header files other than /usr/include
 #
-INCLUDES = -I../../
+INCLUDES = -I$(CPX_DIR)
 
 # define library paths in addition to /usr/lib
 #   if I wanted to include libraries not in /usr/lib I'd specify
@@ -45,14 +45,14 @@ INCLUDES = -I../../
 #LFLAGS = -L/home/newhall/lib  -L../lib
 
 # define any libraries to link into executable:
-#   if I want to link in libraries (libx.so or libx.a) I use the -llibname 
+#   if I want to link in libraries (libx.so or libx.a) I use the -llibname
 #   option, something like (this will link in libmylib.so and libm.so:
 #LIBS = -lmylib -lm
 
 # define the C source files
-SRCS = $(wildcard *.c) $(wildcard ../../*.c)
+SRCS = $(wildcard *.c) $(wildcard $(CPX_DIR)/*.c)
 
-# define the C object files 
+# define the C object files
 #
 # This uses Suffix Replacement within a macro:
 #   $(name:string1=string2)
@@ -62,11 +62,11 @@ SRCS = $(wildcard *.c) $(wildcard ../../*.c)
 #
 OBJS = $(SRCS:.c=.o)
 
-# define the executable file 
+# define the executable file
 MAIN = CorePartition.bin
 
 #
-# The following part of the makefile is generic; it can be used to 
+# The following part of the makefile is generic; it can be used to
 # build any executable just by changing the definitions above and by
 # deleting dependencies appended to the file from 'make depend'
 #
@@ -76,18 +76,18 @@ MAIN = CorePartition.bin
 all:    $(MAIN)
 	@echo  CorePartition has beem compilled
 
-$(MAIN): $(OBJS) 
+$(MAIN): $(OBJS)
 	$(CC) $(CFLAGS) $(INCLUDES) -o $(MAIN) $(OBJS) $(LFLAGS) $(LIBS)
 
 # this is a suffix replacement rule for building .o's from .c's
 # it uses automatic variables $<: the name of the prerequisite of
-# the rule(a .c file) and $@: the name of the target of the rule (a .o file) 
+# the rule(a .c file) and $@: the name of the target of the rule (a .o file)
 # (see the gnu make manual section about automatic variables)
 .c.o:
 	$(CC) $(CFLAGS) $(INCLUDES) -c $<  -o $@
 
 clean:
-	$(RM) *.o *~ $(MAIN)
+	$(RM) $(OBJS) *~ $(MAIN)
 
 depend: $(SRCS)
 	makedepend $(INCLUDES) $^
